--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -45,6 +45,21 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-2
 
+      - name: Destroy infra (cleanup)
+        uses: newrelic/fargate-runner-action@main
+        with:
+          aws_region: us-east-2
+          container_make_target: "test/provision-destroy TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
+          ecs_cluster_name: caos_otel_releases
+          task_definition_name: otel-releases-td
+          cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
+          cloud_watch_logs_stream_name: ecs/test-otel-releases
+          aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
+          repo_name: "newrelic/opentelemetry-collector-releases"
+          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          log_filters: |
+            Destroy\scomplete!
+
       - name: Provision infra
         uses: newrelic/fargate-runner-action@main
         with:
