--- a/test/canaries/deploy_canaries.yml
+++ b/test/canaries/deploy_canaries.yml
@@ -1,13 +1,13 @@
 ---
-
+#
 #- hosts: all
 #  become: true
-#  gather_facts: no
 #
 #  tasks:
-#    - name: install python
-#      include_role:
-#        name: caos.ansible_roles.install_python
+#    - name: Log into DockerHub
+#      community.docker.docker_login:
+#        username: "{{ docker_username }}"
+#        password: "{{ docker_password }}"
 
 - hosts: all
   become: true
