--- a/test/canaries/deploy_canaries.yml
+++ b/test/canaries/deploy_canaries.yml
@@ -5,9 +5,10 @@
 
   tasks:
     - name: Log into DockerHub
-      community.docker.docker_login:
-        username: "{{ docker_username }}"
-        password: "{{ docker_password }}"
+      shell: "echo '{{ docker_password }}'| docker login --username {{ docker_username }} --password-stdin"
+#      community.docker.docker_login:
+#        username: "{{ docker_username }}"
+#        password: "{{ docker_password }}"
 
 - hosts: all
   become: true
