--- a/test/canaries/requirements.yml
+++ b/test/canaries/requirements.yml
@@ -1,3 +1,7 @@
 collections:
     - name: git+https://github.com/newrelic-experimental/caos-ansible-roles.git#/caos.ansible_roles/
       type: git
+
+#roles:
+#  - src: community.docker
+#    name: docker
