--- a/.github/workflows/canaries_on_demand.yml
+++ b/.github/workflows/canaries_on_demand.yml
@@ -14,7 +14,7 @@ on:
 #        default: "main"
 
 jobs:
-  packaging:
+  canaries:
     uses: ./.github/workflows/component_canaries.yml
     with:
       TAG: "0.0.6"
@@ -24,3 +24,20 @@ jobs:
     secrets:
       AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+
+  alerts:
+    needs: [canaries]
+    uses: ./.github/workflows/component_canary_alerts.yml
+    secrets:
+      AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+      CANARIES_NR_API_KEY: ${{ secrets.CANARIES_NR_API_KEY }}
+    with:
+      TAG: "0.0.6"
+      NR_ACCOUNT_ID: 1038907
+      NR_REGION: Staging
+      INSTANCE_NAME_PATTERN: otel-canary:v${{ github.event.inputs.tag }}:*
+      TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_${{ github.event.inputs.tag }}
+      TF_STATE_BUCKET: automation-pipeline-terraform-state
+      TF_STATE_REGION: us-east-2
+      POLICIES_PREFIX: "nr-otel-collector-pre-release__canaries_metric_comparator"
+      REF: "canaries_ec2"
