--- a/.github/workflows/ci_canary_alerts_provision.yml
+++ b/.github/workflows/ci_canary_alerts_provision.yml
@@ -21,7 +21,7 @@ jobs:
       NR_ACCOUNT_ID: 1038907
       NR_REGION: Staging
       # To be decided 👇
-      INSTANCE_NAME_PATTERN: canary:v${{ github.event.inputs.tag }}:*
+      INSTANCE_NAME_PATTERN: otel-canary:v${{ github.event.inputs.tag }}:*
       TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_${{ github.event.inputs.tag }}
       TF_STATE_BUCKET: automation-pipeline-terraform-state
       TF_STATE_REGION: us-east-2
