--- a/test/terraform/alerts/vars.auto.tfvars.dist
+++ b/test/terraform/alerts/vars.auto.tfvars.dist
@@ -292,7 +292,7 @@ conditions = [
       state      = "free"
       mountpoint = "/"
     }
-    function = latest # try `function` in template
+    function = "latest" # try `function` in template
   },
   {
     name          = "host receiver filesystem.utilization"
