--- a/.github/workflows/canaries_on_demand.yml
+++ b/.github/workflows/canaries_on_demand.yml
@@ -4,8 +4,11 @@ on:
   push:
 #  workflow_dispatch:
 #    inputs:
-#      unique_tag:
-#        description: 'Unique tag or prefix'
+#      tag:
+#        description: 'Tag'
+#        required: true
+#      previous_tag:
+#        description: 'Tag to compare to'
 #        required: true
 #      branch:
 #        description: 'Branch to test'
@@ -17,9 +20,9 @@ jobs:
   canaries:
     uses: ./.github/workflows/component_canaries.yml
     with:
-      TAG: "0.0.6"
-      PREVIOUS_TAG: "0.0.5"
-      BRANCH_REF: "canaries_ec2"
+      TAG: "0.0.6" #${{ inputs.tag }}
+      PREVIOUS_TAG: "0.0.5" #${{ inputs.previous_tag }}
+      BRANCH_REF: "canaries_ec2" #${{ inputs.branch }}
       PLATFORM: "linux"
     secrets:
       AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
@@ -32,12 +35,12 @@ jobs:
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
       CANARIES_NR_API_KEY: ${{ secrets.CANARIES_NR_API_KEY }}
     with:
-      TAG: "0.0.6"
+      TAG: "0.0.6" #${{ inputs.tag }}
       NR_ACCOUNT_ID: 1038907
       NR_REGION: Staging
-      INSTANCE_NAME_PATTERN: otel-canary:v${{ github.event.inputs.tag }}:*
-      TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_${{ github.event.inputs.tag }}
+      INSTANCE_NAME_PATTERN: otel-canary:0.0.6-* #otel-canary:${{ inputs.tag }}-*
+      TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_0.0.6 #nr_otel_collector_prerelease_alerts/state_${{ inputs.tag }}
       TF_STATE_BUCKET: automation-pipeline-terraform-state
       TF_STATE_REGION: us-east-2
       POLICIES_PREFIX: "nr-otel-collector-pre-release__canaries_metric_comparator"
-      REF: "canaries_ec2"
+      REF: "canaries_ec2" #${{ inputs.branch }}
