--- a/.github/workflows/canaries_on_demand.yml
+++ b/.github/workflows/canaries_on_demand.yml
@@ -1,28 +1,27 @@
 name: . 🐤 🦺 Canaries on demand
 
 on:
-  push:
-#  workflow_dispatch:
-#    inputs:
-#      tag:
-#        description: 'Tag'
-#        required: true
-#      previous_tag:
-#        description: 'Tag to compare to'
-#        required: true
-#      branch:
-#        description: 'Branch to test'
-#        required: false
-#        type: string
-#        default: "main"
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag'
+        required: true
+      previous_tag:
+        description: 'Tag to compare to'
+        required: true
+      branch:
+        description: 'Branch to test'
+        required: false
+        type: string
+        default: "main"
 
 jobs:
   canaries:
     uses: ./.github/workflows/component_canaries.yml
     with:
-      TAG: "0.0.6" #${{ inputs.tag }}
-      PREVIOUS_TAG: "0.0.5" #${{ inputs.previous_tag }}
-      BRANCH_REF: "canaries_ec2" #${{ inputs.branch }}
+      TAG: ${{ inputs.tag }}
+      PREVIOUS_TAG: ${{ inputs.previous_tag }}
+      BRANCH_REF: ${{ inputs.branch }}
       PLATFORM: "linux"
     secrets:
       AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
@@ -35,12 +34,12 @@ jobs:
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
       CANARIES_NR_API_KEY: ${{ secrets.CANARIES_NR_API_KEY }}
     with:
-      TAG: "0.0.6" #${{ inputs.tag }}
+      TAG: ${{ inputs.tag }}
       NR_ACCOUNT_ID: 1038907
       NR_REGION: Staging
-      INSTANCE_NAME_PATTERN: otel-canary:0.0.6-* #otel-canary:${{ inputs.tag }}-*
-      TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_0.0.6 #nr_otel_collector_prerelease_alerts/state_${{ inputs.tag }}
+      INSTANCE_NAME_PATTERN: otel-canary:${{ inputs.tag }}-*
+      TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_${{ inputs.tag }}
       TF_STATE_BUCKET: automation-pipeline-terraform-state
       TF_STATE_REGION: us-east-2
       POLICIES_PREFIX: "nr-otel-collector-pre-release__canaries_metric_comparator"
-      REF: "canaries_ec2" #${{ inputs.branch }}
+      REF: ${{ inputs.branch }}
