--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -28,6 +28,7 @@ env:
   PREVIOUS_TAG: ${{ inputs.PREVIOUS_TAG }}
   PLATFORM: ${{ inputs.PLATFORM }}
   GITHUB_REFERENCE_NAME: ${{ inputs.BRANCH_REF }}
+  IMAGE: ${{ inputs.IMAGE }}
 
 permissions:
   id-token: write
@@ -84,7 +85,7 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "canaries PREVIOUS_IMAGE='cciutea768/nr-otel-collector:${{ env.PREVIOUS_TAG }}-rc' CURRENT_IMAGE='cciutea768/nr-otel-collector:${{ env.TAG }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
+          container_make_target: "canaries PREVIOUS_IMAGE='${{ env.IMAGE }}:${{ env.PREVIOUS_TAG }}-rc' CURRENT_IMAGE='${{ env.IMAGE }}:${{ env.TAG }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
