NR-83112 : provision canaries (#26)
* NR-83112 : provision canaries ec2

* add display_name

* test from clean infra

* update pre-release

* add docker login

* update secrets

* integrate alerts

* fix alerts

* fix alerts pattern

* point pipeline to manual dispatch

* move image to inputs

--- a/test/canaries/deploy_canaries.yml
+++ b/test/canaries/deploy_canaries.yml
@@ -1,39 +1,20 @@
 ---
+
+- hosts: all
+  become: true
+
+  tasks:
+    - name: Log into DockerHub
+      shell: "echo '{{ docker_password }}'| docker login --username {{ docker_username }} --password-stdin"
+#      community.docker.docker_login:
+#        username: "{{ docker_username }}"
+#        password: "{{ docker_password }}"
+
 - hosts: all
   become: true
   roles:
+#    - role: caos.ansible_roles.install_python
+#    - role: caos.ansible_roles.install_gpg
     - role: caos.ansible_roles.docker_install
-    - role: pip
-      vars:
-        pip_install_packages:
-          - name: docker
-            extra_args: --ignore-installed
-          - name: docker-compose
+    - role: otel-dockerized
 
-- name: Run containers with the provided images
-  hosts: all
-  gather_facts: true
-  become: true
-  tasks:
-    - community.docker.docker_compose:
-        project_name: otel-collector_canaries
-        definition:
-          version: '3'
-          services:
-            previous_collector:
-              container_name: "otel_collector_previous"
-              image: "{{ previous_image }}"
-              restart: always
-            current_collector:
-              container_name: "otel_collector_current"
-              image: "{{ current_image }}"
-              restart: always
-      register: output
-
-    - ansible.builtin.debug:
-        var: output
-
-    - ansible.builtin.assert:
-        that:
-          - 'output.services.previous_collector.otel_collector_previous.state.running'
-          - 'output.services.current_collector.otel_collector_current.state.running'
