refactor: packaging Makefile

--- a/test/packaging/Makefile
+++ b/test/packaging/Makefile
@@ -1,23 +1,21 @@
+# Include Ansible dependencies common installation strategy
+include ../Ansible.common
+.DEFAULT_GOAL := packaging
+
+ANSIBLE_FOLDER := $(CURDIR)/ansible
 LIMIT ?= "testing_hosts_linux"
 ANSIBLE_FORKS ?= 5
+ANSIBLE_INVENTORY ?= $(ANSIBLE_FOLDER)/inventory.ec2
 
-ANSIBLE_INVENTORY_FOLDER ?= $(CURDIR)/test/packaging/ansible
-
-ifeq ($(origin ANSIBLE_INVENTORY_FILE), undefined)
-  ANSIBLE_INVENTORY = $(CURDIR)/test/packaging/ansible/inventory.ec2
-else
-  ANSIBLE_INVENTORY = $(ANSIBLE_INVENTORY_FOLDER)/$(ANSIBLE_INVENTORY_FILE)
-endif
-
-.PHONY: test/packaging/requirements
-test/packaging/requirements:
-	ansible-galaxy install -r test/packaging/ansible/requirements.yaml
-
-.PHONY: test/packaging
-test/packaging: test/packaging/requirements
+.PHONY: packaging
+packaging:
 ifndef NR_LICENSE_KEY
 	@echo "NR_LICENSE_KEY variable must be provided for test/packaging"
 	exit 1
 endif
+	$(MAKE) ansible/dependencies ANSIBLE_FOLDER=$(ANSIBLE_FOLDER)
+	@ANSIBLE_DISPLAY_SKIPPED_HOSTS=NO ANSIBLE_DISPLAY_OK_HOSTS=NO ansible-playbook -f $(ANSIBLE_FORKS)  -i $(ANSIBLE_INVENTORY) --limit=$(LIMIT) -e collector_nr_license_key=$(NR_LICENSE_KEY) $(ANSIBLE_FOLDER)/test.yaml
 
-	@ANSIBLE_DISPLAY_SKIPPED_HOSTS=NO ANSIBLE_DISPLAY_OK_HOSTS=NO ansible-playbook -f $(ANSIBLE_FORKS)  -i $(ANSIBLE_INVENTORY) --limit=$(LIMIT) -e collector_nr_license_key=$(NR_LICENSE_KEY) $(CURDIR)/test/packaging/ansible/test.yaml
+.PHONY: clean
+clean:
+	$(MAKE) ansible/clean ANSIBLE_FOLDER=$(ANSIBLE_FOLDER)
