--- a/test/packaging/ansible/installation-pinned.yaml
+++ b/test/packaging/ansible/installation-pinned.yaml
@@ -11,8 +11,7 @@
         name: caos.ansible_roles.package_repo_update
 
     - name: Initial cleanup # Only required for shared infra.
-      include_role:
-        name: cleanup
+      include_tasks: ./custom_tasks/cleanup.yml
 
   tasks:
     - name: Pinned installation tests suite
@@ -39,15 +38,12 @@
                 version: "0.0.10"
 
         - name: assert ownership
-          include_role:
-            name: assert_ownership
+          include_tasks: ./custom_tasks/assert_ownership.yml
           vars:
             ownership_process: "nr-otel-collector"
             ownership_files: "root"
 
       always:
         - name: Final cleanup # Only required for shared infra.
-          include_role:
-            name: cleanup
-
+          include_tasks: ./custom_tasks/cleanup.yml
 ...
