--- a/test/canaries/Makefile
+++ b/test/canaries/Makefile
@@ -14,6 +14,10 @@ endif
 ifndef CURRENT_IMAGE
 	$(error CURRENT_IMAGE is not set)
 endif
+
+ifndef NR_LICENSE_KEY_CANARIES
+	$(error NR_LICENSE_KEY_CANARIES is not set)
+endif
 	ansible-playbook -i $(ANSIBLE_INVENTORY) deploy_canaries.yml -e "current_image=$(CURRENT_IMAGE) previous_image=$(PREVIOUS_IMAGE) nr_license_key_canaries=$(NR_LICENSE_KEY_CANARIES) docker_username=$(DOCKER_USERNAME) docker_password=$(DOCKER_PASSWORD)"
 
 
