--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -50,7 +50,7 @@ jobs:
 #        uses: newrelic/fargate-runner-action@main
 #        with:
 #          aws_region: us-east-2
-#          container_make_target: "test/provision-destroy TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
+#          container_make_target: "test/provision-clean TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
 #          ecs_cluster_name: caos_otel_releases
 #          task_definition_name: otel-releases-td
 #          cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
@@ -65,7 +65,7 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "test/provision-${{ env.PLATFORM }} TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2 TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
+          container_make_target: "test/provision TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2 TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
@@ -85,7 +85,7 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "canaries PREVIOUS_IMAGE='${{ env.IMAGE }}:${{ env.PREVIOUS_TAG }}-rc' CURRENT_IMAGE='${{ env.IMAGE }}:${{ env.TAG }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
+          container_make_target: "test/canaries PREVIOUS_IMAGE='${{ env.IMAGE }}:${{ env.PREVIOUS_TAG }}-rc' CURRENT_IMAGE='${{ env.IMAGE }}:${{ env.TAG }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
