feat: add provision requirements Ansible file

--- a/test/provision/Makefile
+++ b/test/provision/Makefile
@@ -2,6 +2,7 @@
 include ../Ansible.common
 
 TERRAFORM_DIR := ./terraform
+ANSIBLE_FOLDER := ./terraform
 
 .DEFAULT_GOAL := provision
 
@@ -14,7 +15,8 @@ endif
 	sed "s/TAG_OR_UNIQUE_NAME/${TAG_OR_UNIQUE_NAME}/g" "$(TERRAFORM_DIR)/caos-linux.auto.tfvars.dist" > "$(TERRAFORM_DIR)/caos.auto.tfvars"
 
 .PHONY: provision
-provision: terraform/backend ansible/dependencies
+provision: terraform/backend
+	$(MAKE) ansible/dependencies ANSIBLE_FOLDER=$(ANSIBLE_FOLDER)
 	terraform -chdir=$(TERRAFORM_DIR) init -reconfigure && \
 	terraform -chdir=$(TERRAFORM_DIR) apply -auto-approve
 
@@ -23,3 +25,4 @@ clean: terraform/backend ansible/clean
 	terraform -chdir=$(TERRAFORM_DIR) init -reconfigure && \
     terraform -chdir=$(TERRAFORM_DIR) destroy -auto-approve && \
 	rm "$(TERRAFORM_DIR)/terraform.backend.tf" "$(TERRAFORM_DIR)/caos.auto.tfvars"
+	$(MAKE) ansible/clean ANSIBLE_FOLDER=$(ANSIBLE_FOLDER)
