ci: add IMAGE input for canaries

--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -12,6 +12,9 @@ on:
       TAG:
         required: true
         type: string
+      IMAGE:
+        required: true
+        type: string
       PREVIOUS_TAG:
         required: true
         type: string
