--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,11 +2,18 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [main]
   pull_request:
     branches: [main]
 
 jobs:
+  packaging-tests:
+    uses: ./.github/workflows/component_provision_packaging.yml
+    secrets:
+      AWS_ROLE_ARN: ${{secrets.AWS_ROLE_ARN}}
+      AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+    with:
+      BRANCH_REF: "testing_prerelease"
+      TAG_OR_UNIQUE_NAME:  "0.0.11"
   check-distributions:
     name: Check distributions name
     runs-on: ubuntu-latest
