ci: run packaging tests after s3-publish

--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -92,6 +92,7 @@ jobs:
 
   packaging-tests:
     uses: ./.github/workflows/component_provision_packaging.yml
+    needs: [publishing-to-s3]
     secrets:
       AWS_ROLE_ARN: ${{secrets.AWS_ROLE_ARN}}
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
