--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,13 +8,20 @@ on:
 
 jobs:
   check-distributions:
-    name: Check distributions name
+    name: Validate distributions
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '~1.19.4'
+          check-latest: true
       - name: Check unique distributions names
         run: ./.github/workflows/scripts/check_distro_names.sh
+      - name: Check distributions third party libraries
+        run: make licenses-check
   build:
     name: Build
     runs-on: ubuntu-20.04
