--- a/Makefile.common
+++ b/Makefile.common
@@ -17,10 +17,13 @@ DISTRIBUTIONS_MODS := $(shell find ./**/* $(FIND_MOD_ARGS) -exec $(TO_MOD_DIR) )
 .PHONY: third-party-notices
 third-party-notices: OUT ?= THIRD_PARTY_NOTICES.md
 third-party-notices:
-	@$(foreach dir,$(DISTRIBUTIONS_MODS),$(shell cd $(dir) && go list -mod=mod -m -json all)) | go-licence-detector \
+	$(foreach dir,$(DISTRIBUTIONS_MODS),$(shell cd $(dir) && go list -mod=mod -m -json all >> /tmp/tmp_notices.json))
+	go-licence-detector \
+		-in /tmp/tmp_notices.json \
 		-rules $(SRC_ROOT)/internal/assets/license/rules.json \
 		-noticeTemplate $(SRC_ROOT)/internal/assets/license/THIRD_PARTY_NOTICES.md.tmpl \
 		-noticeOut $(OUT)
+	echo '' > /tmp/tmp_notices.json
 
 .PHONY: third-party-notices-check
 third-party-notices-check:
