--- a/test/packaging/ansible/test.yaml
+++ b/test/packaging/ansible/test.yaml
@@ -3,8 +3,9 @@
 - name: pinned version agent installation
   import_playbook: installation-pinned.yaml
 
-- name: collector upgrade
-  import_playbook: upgrade.yaml
+# First version cannot be upgraded from a previous one
+# - name: collector upgrade
+#   import_playbook: upgrade.yaml
 
 - name: agent uninstallation
   import_playbook: uninstallation.yaml
