--- a/test/packaging/ansible/upgrade.yaml
+++ b/test/packaging/ansible/upgrade.yaml
@@ -12,8 +12,9 @@
   tasks:
     - name: Installation tests suite
       vars:
-        initial_version: "0.0.4"
+        initial_version: "0.0.1"
         env_vars:
+          NRDOT_VERSION: "0.0.2"
 
       block:
 
