--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -21,16 +21,11 @@ on:
       PLATFORM:
         required: true
         type: string
-      BRANCH_REF:
-        required: false
-        type: string
-        default: "main"
 
 env:
   TAG: ${{ inputs.TAG }}
   PREVIOUS_TAG: ${{ inputs.PREVIOUS_TAG }}
   PLATFORM: ${{ inputs.PLATFORM }}
-  GITHUB_REFERENCE_NAME: ${{ inputs.BRANCH_REF }}
   IMAGE: ${{ inputs.IMAGE }}
 
 permissions:
@@ -49,6 +44,14 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-2
 
+      - name: Set branch name
+        run: |
+          # Short name for current branch. For PRs, use target branch (base ref)
+          GIT_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+          # Is the ref a tag? If so, remove refs/tags/ prefix
+          GIT_BRANCH=${GIT_BRANCH#refs/tags/}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+
 #      - name: Destroy infra (cleanup)
 #        uses: newrelic/fargate-runner-action@main
 #        with:
@@ -60,7 +63,7 @@ jobs:
 #          cloud_watch_logs_stream_name: ecs/test-otel-releases
 #          aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
 #          repo_name: "newrelic/opentelemetry-collector-releases"
-#          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+#          ref: "${{ env.GIT_BRANCH }}"
 #          log_filters: |
 #            Destroy\scomplete!
 
@@ -75,7 +78,7 @@ jobs:
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
           log_filters: |
             \[ALLOW_MSG\].+
             TASK\s\[.*\]\s
@@ -95,4 +98,4 @@ jobs:
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
