--- a/.github/workflows/component_provision_packaging.yml
+++ b/.github/workflows/component_provision_packaging.yml
@@ -12,14 +12,9 @@ on:
       TAG_OR_UNIQUE_NAME:
         required: true
         type: string
-      BRANCH_REF:
-        required: false
-        type: string
-        default: "main"
 
 env:
   TAG_OR_UNIQUE_NAME: ${{ inputs.TAG_OR_UNIQUE_NAME }}
-  GITHUB_REFERENCE_NAME: ${{ inputs.BRANCH_REF }}
 
 permissions:
   id-token: write
@@ -37,6 +32,14 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-2
 
+      - name: Set branch name
+        run: |
+          # Short name for current branch. For PRs, use target branch (base ref)
+          GIT_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+          # Is the ref a tag? If so, remove refs/tags/ prefix
+          GIT_BRANCH=${GIT_BRANCH#refs/tags/}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+
       - name: Provision infra
         uses: newrelic/fargate-runner-action@main
         with:
@@ -48,7 +51,7 @@ jobs:
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
           log_filters: |
             \[ALLOW_MSG\].+
             TASK\s\[.*\]\s
@@ -68,7 +71,7 @@ jobs:
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
 
       - name: Destroy infra
         uses: newrelic/fargate-runner-action@main
@@ -81,6 +84,6 @@ jobs:
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
           log_filters: |
             Destroy\scomplete!
