--- a/test/packaging/ansible/upgrade.yaml
+++ b/test/packaging/ansible/upgrade.yaml
@@ -60,7 +60,7 @@
           assert:
             that: collector_pid.stdout != updated_collector_pid.stdout
 
-      always:
-        - name: Final cleanup # Only required for shared infra.
-          include_tasks: ./custom_tasks/cleanup.yml
+      # always:
+      #   - name: Final cleanup # Only required for shared infra.
+      #     include_tasks: ./custom_tasks/cleanup.yml
 ...
