--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -64,7 +64,7 @@ jobs:
       AWS_ROLE_SESSION_NAME: ${{ secrets.CAOS_AWS_ROLE_SESSION_NAME_TESTING }}
     with:
       ACCESS_POINT_HOST: "testing"
-      SCHEMA_BRANCH: "main"
+      SCHEMA_BRANCH: ${{ github.ref_name }}
       RUN_ID: ${{ github.run_id }}
       TAG: ${{ github.event.release.tag_name }}
       AWS_S3_BUCKET_NAME: "nr-downloads-ohai-testing"
@@ -98,3 +98,5 @@ jobs:
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
     with:
       TAG_OR_UNIQUE_NAME:  ${{ github.event.release.tag_name }}
+      BRANCH_REF: ${{ github.ref_name }}
+
