ci: use branch for ansible roles

--- a/test/canaries/requirements.yml
+++ b/test/canaries/requirements.yml
@@ -1,3 +1,4 @@
 collections:
     - name: git+https://github.com/newrelic-experimental/caos-ansible-roles.git#/caos.ansible_roles/
       type: git
+      version: ci/NR-109510-NRDOT-select-default-if-no-config-or-template
