--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -100,3 +100,33 @@ jobs:
       TAG_OR_UNIQUE_NAME:  ${{ github.event.release.tag_name }}
       BRANCH_REF: ${{ github.ref_name }}
 
+  canaries:
+    uses: ./.github/workflows/component_canaries.yml
+    needs: [packaging-tests]
+    with:
+      TAG: ${{ inputs.tag }}
+      PREVIOUS_TAG: ${{ inputs.previous_tag }}
+      BRANCH_REF: ${{ inputs.branch }}
+      PLATFORM: "linux"
+      IMAGE: "cciutea768/nr-otel-collector" #should be changed after pre-release
+    secrets:
+      AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
+      AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+
+  alerts:
+    needs: [canaries]
+    uses: ./.github/workflows/component_canary_alerts.yml
+    secrets:
+      AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+      CANARIES_NR_API_KEY: ${{ secrets.CANARIES_NR_API_KEY }}
+    with:
+      TAG: ${{ inputs.tag }}
+      NR_ACCOUNT_ID: 1038907
+      NR_REGION: Staging
+      INSTANCE_NAME_PATTERN: otel-canary:${{ inputs.tag }}-*
+      TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_${{ inputs.tag }}
+      TF_STATE_BUCKET: automation-pipeline-terraform-state
+      TF_STATE_REGION: us-east-2
+      POLICIES_PREFIX: "nr-otel-collector-pre-release__canaries_metric_comparator"
+      REF: ${{ inputs.branch }}
+
