--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -7,6 +7,9 @@ on:
     tags:
       - '*'
 
+env:
+  NRDOT_VERSION: "0.0.1"
+
 jobs:
   prerelease:
     name: Pre-release
@@ -98,6 +101,7 @@ jobs:
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
     with:
       TAG_OR_UNIQUE_NAME:  ${{ github.event.release.tag_name }}
+      NRDOT_VERSION: ${{ github.env.NRDOT_VERSION  }}
 
   # First release: does not use canaries from previous version
   # canaries:
@@ -108,6 +112,7 @@ jobs:
   #     PREVIOUS_TAG: "latest"
   #     PLATFORM: "linux"
   #     IMAGE: "newrelic/nr-otel-collector" #should be changed after pre-release
+  #     NRDOT_VERSION: ${{ github.env.NRDOT_VERSION}}
   #   secrets:
   #     AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
   #     AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
