--- a/test/packaging/ansible/installation-pinned.yaml
+++ b/test/packaging/ansible/installation-pinned.yaml
@@ -16,8 +16,6 @@
   tasks:
     - name: Pinned installation tests suite
       vars:
-        env_vars:
-          NRDOT_VERSION: "0.0.1"
 
       block:
 
@@ -27,7 +25,7 @@
           vars:
             distribution: "nr-otel-collector"
             repo_endpoint: "http://nr-downloads-ohai-testing.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
-            target_version: "{{ env_vars.NRDOT_VERSION }}"
+            target_version: "{{ lookup('ansible.builtin.env', 'NRDOT_VERSION') }}"
             collector_otlp_endpoint: "staging-otlp.nr-data.net:4317"
 
         - name: Assert version
@@ -36,7 +34,7 @@
           vars:
             target_versions:
               - exec: "nr-otel-collector --version"
-                version: "{{ env_vars.NRDOT_VERSION }}"
+                version: "{{ lookup('ansible.builtin.env', 'NRDOT_VERSION') }}"
 
         - name: assert ownership
           include_tasks: ./custom_tasks/assert_ownership.yml
