wip: hardcode NRDOT_VERSION (env var is deleted?)

--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -100,7 +100,7 @@ jobs:
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
     with:
       TAG_OR_UNIQUE_NAME:  ${{ github.event.release.tag_name }}
-      NRDOT_VERSION: ${{ github.env.NRDOT_VERSION  }}
+      NRDOT_VERSION: "0.0.1" # FIXME should come from a single value
 
   # First release: does not use canaries from previous version
   # canaries:
@@ -111,7 +111,7 @@ jobs:
   #     PREVIOUS_TAG: "latest"
   #     PLATFORM: "linux"
   #     IMAGE: "newrelic/nr-otel-collector" #should be changed after pre-release
-  #     NRDOT_VERSION: ${{ github.env.NRDOT_VERSION}}
+  #     NRDOT_VERSION: "0.0.1" # FIXME should come from a single value
   #   secrets:
   #     AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
   #     AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
