feat: diff using third party notices file

--- a/Makefile.common
+++ b/Makefile.common
@@ -18,14 +18,13 @@ DISTRIBUTIONS_MODS := $(shell find ./**/* $(FIND_MOD_ARGS) -exec $(TO_MOD_DIR) )
 third-party-notices: OUT ?= THIRD_PARTY_NOTICES.md
 third-party-notices:
 	$(foreach dir,$(DISTRIBUTIONS_MODS),$(shell cd $(dir) && go list -mod=mod -m -json all >> /tmp/tmp_notices.json))
-	go-licence-detector \
+	@go-licence-detector \
 		-in /tmp/tmp_notices.json \
 		-rules $(SRC_ROOT)/internal/assets/license/rules.json \
 		-noticeTemplate $(SRC_ROOT)/internal/assets/license/THIRD_PARTY_NOTICES.md.tmpl \
 		-noticeOut $(OUT)
-	echo '' > /tmp/tmp_notices.json
+	@echo '' > /tmp/tmp_notices.json
 
 .PHONY: third-party-notices-check
-third-party-notices-check:
-	@OUT=THIRD_PARTY_NOTICES_GENERATED.md $(MAKE) third-party-notices
-	@diff THIRD_PARTY_NOTICES_GENERATED.md THIRD_PARTY_NOTICES.md 2>&1 > /dev/null || (echo "THIRD_PARTY_NOTICES.md should be generated"; exit 1)
+third-party-notices-check: third-party-notices
+	@git diff --name-only | grep -q "THIRD_PARTY_NOTICES.md" && ( echo "Third party notices out of date, please run \"make licenses\" and commit the changes in this PR."; exit 1; ) || exit 0
